istio/gateway-api/bar-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar
  labels:
    app: bar
    service: bar
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: bar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      serviceAccountName: bar
      containers:
      - name: bar
        image: paulbouwer/hello-kubernetes:1.8
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  hostnames:
    - "bar.example.com"
  rules:
    - matches:
        - path:
            value: /bar
      filters:
        - urlRewrite:
            path:
              replaceFullPath: /
              type: ReplaceFullPath
          type: URLRewrite
      backendRefs:
        - group: ""
          kind: Service
          name: bar
          port: 80
