istio/gateway-api/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bar
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  hostnames:
    - "bar.example.com"
  rules:
    - matches:
        - path:
            value: /bar
      filters:
      # this does not work atm.
        - urlRewrite: 
            path:
              replaceFullPath: /
              type: ReplaceFullPath
          type: URLRewrite
      backendRefs:
        - group: ""
          kind: Service
          name: bar
          port: 80
